# pdf-checking

./: .gitignore  README.md  pyproject.toml
project_fitz/: my_fitz.py
tests/: conftest.py  test_check_pdf_structure.py
