[tool.poetry]
name = "project-fitz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_fitz"}]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.21.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
